# ecommerce

./: README.md  db.sqlite3  pyproject.toml
e_commerce/: pyproject.toml
e_commerce/tests/: test_e_commerce.py
ecommerce/: pyproject.toml
ecommerce/tests/: test_ecommerce.py
loja/: settings.py  urls.py
pedido/: admin.py  models.py  urls.py  views.py
pedido/migrations/: 0001_initial.py  0002_alter_itempedido_options_and_more.py
perfil/: forms.py  models.py  urls.py  views.py
perfil/migrations/: 0001_initial.py  0002_alter_perfil_usuario.py  0003_alter_perfil_cpf_alter_perfil_numero.py
perfil/templates/perfil/: criar.html
produto/: admin.py  models.py  urls.py  views.py
produto/migrations/: 0001_initial.py  0002_variacao.py  0003_alter_variacao_options.py  0004_alter_variacao_options.py  0005_alter_variacao_options_alter_produto_tipo.py  0006_alter_produto_slug.py  0007_alter_produto_preco_marketing_and_more.py  0008_alter_produto_imagem.py  0009_alter_produto_imagem.py  0010_alter_produto_imagem.py  0011_alter_produto_imagem.py  0012_alter_produto_imagem.py
produto/templates/produto/: carrinho.html  detalhe.html  lista.html
produto/templatetags/: omfilters.py
templates/: base.html
templates/parciais/: _carrinho.html  _footer.html  _head.html  _nav.html
utils/: utils.py
