[tool.poetry]
name = "e_commerce"
version = "0.1.0"
description = "criacao de e comerce"
authors = ["muriloeduardo199 <muriloeduardo1993@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
Pillow = "^9.2.0"
django-crispy-forms = "^1.14.0"
django-debug-toolbar = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
