[tool.poetry]
name = "e_commerce"
version = "0.1.0"
description = ""
authors = ["muriloeduardo199 <muriloeduardo1993@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
